--- a/pokemonGoIvInspector/CalcPkmHistoryCell.xib
+++ b/pokemonGoIvInspector/CalcPkmHistoryCell.xib
@@ -9,51 +9,69 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CalcPkmHistoryCell" customModule="pokemonGoIvInspector" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="100"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="viD-ev-vm9">
-                    <rect key="frame" x="8" y="18" width="64" height="64"/>
+                    <rect key="frame" x="8" y="28" width="64" height="64"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="64" id="6i1-1c-J7q"/>
                         <constraint firstAttribute="width" constant="64" id="tHe-f8-yst"/>
                     </constraints>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uob-Hf-cXT">
-                    <rect key="frame" x="80" y="8" width="512" height="84"/>
+                    <rect key="frame" x="80" y="8" width="232" height="104"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UcF-Pj-2SG">
-                            <rect key="frame" x="0.0" y="0.0" width="512" height="21"/>
+                            <rect key="frame" x="0.0" y="0.0" width="232" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Cg-Pd-68g">
-                            <rect key="frame" x="0.0" y="24" width="252" height="16"/>
+                            <rect key="frame" x="0.0" y="24" width="112" height="16"/>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KBH-Kd-4gR">
-                            <rect key="frame" x="0.0" y="43" width="252" height="16"/>
+                            <rect key="frame" x="0.0" y="43" width="112" height="16"/>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hML-VR-us8">
-                            <rect key="frame" x="260" y="43" width="252" height="16"/>
+                            <rect key="frame" x="120" y="43" width="112" height="16"/>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zpe-eS-Iyi">
-                            <rect key="frame" x="260" y="24" width="252" height="16"/>
+                            <rect key="frame" x="120" y="24" width="112" height="16"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NL3-hH-zvb">
+                            <rect key="frame" x="0.0" y="81" width="112" height="16"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nwn-2p-00W">
+                            <rect key="frame" x="120" y="62" width="112" height="16"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zoi-eX-Ys8">
+                            <rect key="frame" x="120" y="81" width="112" height="16"/>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mRe-vR-SQk">
-                            <rect key="frame" x="0.0" y="62" width="512" height="16"/>
+                            <rect key="frame" x="0.0" y="62" width="112" height="16"/>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <nil key="highlightedColor"/>
@@ -65,19 +83,29 @@
                         <constraint firstItem="KBH-Kd-4gR" firstAttribute="bottom" secondItem="uob-Hf-cXT" secondAttribute="bottomMargin" id="6az-H9-uUO"/>
                         <constraint firstAttribute="trailingMargin" secondItem="mRe-vR-SQk" secondAttribute="trailing" id="7NZ-dN-ay4"/>
                         <constraint firstItem="KBH-Kd-4gR" firstAttribute="leading" secondItem="uob-Hf-cXT" secondAttribute="leadingMargin" id="7Rj-QZ-wut"/>
+                        <constraint firstItem="Nwn-2p-00W" firstAttribute="width" secondItem="mRe-vR-SQk" secondAttribute="width" id="83f-oK-V7z"/>
                         <constraint firstItem="mRe-vR-SQk" firstAttribute="leading" secondItem="uob-Hf-cXT" secondAttribute="leadingMargin" id="8am-qn-AQN"/>
                         <constraint firstItem="Zpe-eS-Iyi" firstAttribute="centerY" secondItem="5Cg-Pd-68g" secondAttribute="centerY" id="9HK-L0-iIa"/>
+                        <constraint firstItem="NL3-hH-zvb" firstAttribute="leading" secondItem="uob-Hf-cXT" secondAttribute="leadingMargin" id="Bne-RE-KE5"/>
                         <constraint firstItem="mRe-vR-SQk" firstAttribute="top" secondItem="KBH-Kd-4gR" secondAttribute="bottom" constant="3" id="Efe-ea-h5D"/>
+                        <constraint firstAttribute="trailingMargin" secondItem="Nwn-2p-00W" secondAttribute="trailing" id="G1G-oF-Yqe"/>
+                        <constraint firstItem="NL3-hH-zvb" firstAttribute="top" secondItem="mRe-vR-SQk" secondAttribute="bottom" constant="3" id="PUm-G4-gkM"/>
                         <constraint firstItem="5Cg-Pd-68g" firstAttribute="leading" secondItem="uob-Hf-cXT" secondAttribute="leadingMargin" id="SM9-7O-Wfn"/>
                         <constraint firstItem="UcF-Pj-2SG" firstAttribute="top" secondItem="uob-Hf-cXT" secondAttribute="topMargin" id="SUd-L8-Gw2"/>
                         <constraint firstItem="KBH-Kd-4gR" firstAttribute="top" secondItem="5Cg-Pd-68g" secondAttribute="bottom" constant="3" id="TFz-eP-oZW"/>
+                        <constraint firstItem="Zoi-eX-Ys8" firstAttribute="width" secondItem="NL3-hH-zvb" secondAttribute="width" id="TLb-Re-tIO"/>
                         <constraint firstAttribute="trailingMargin" secondItem="hML-VR-us8" secondAttribute="trailing" id="W8s-Kf-XFg"/>
+                        <constraint firstItem="Zoi-eX-Ys8" firstAttribute="centerY" secondItem="NL3-hH-zvb" secondAttribute="centerY" id="WyT-P0-aMK"/>
+                        <constraint firstAttribute="trailingMargin" secondItem="Zoi-eX-Ys8" secondAttribute="trailing" id="ahg-ct-E7a"/>
                         <constraint firstItem="hML-VR-us8" firstAttribute="centerY" secondItem="KBH-Kd-4gR" secondAttribute="centerY" id="ave-ju-1sQ"/>
                         <constraint firstItem="UcF-Pj-2SG" firstAttribute="leading" secondItem="uob-Hf-cXT" secondAttribute="leadingMargin" id="bSd-KI-Qzy"/>
                         <constraint firstItem="Zpe-eS-Iyi" firstAttribute="width" secondItem="5Cg-Pd-68g" secondAttribute="width" id="dd2-4D-Ciq"/>
                         <constraint firstAttribute="trailingMargin" secondItem="UcF-Pj-2SG" secondAttribute="trailing" id="dir-Ai-hBb"/>
                         <constraint firstItem="5Cg-Pd-68g" firstAttribute="top" secondItem="UcF-Pj-2SG" secondAttribute="bottom" constant="3" id="ews-cE-viH"/>
+                        <constraint firstItem="Nwn-2p-00W" firstAttribute="leading" secondItem="mRe-vR-SQk" secondAttribute="trailing" constant="8" id="g2B-vM-D4t"/>
                         <constraint firstAttribute="trailingMargin" secondItem="Zpe-eS-Iyi" secondAttribute="trailing" id="huV-97-8zP"/>
+                        <constraint firstItem="Nwn-2p-00W" firstAttribute="centerY" secondItem="mRe-vR-SQk" secondAttribute="centerY" id="kfn-58-XrX"/>
+                        <constraint firstItem="Zoi-eX-Ys8" firstAttribute="leading" secondItem="NL3-hH-zvb" secondAttribute="trailing" constant="8" id="vDk-Qt-vYi"/>
                         <constraint firstItem="hML-VR-us8" firstAttribute="leading" secondItem="KBH-Kd-4gR" secondAttribute="trailing" constant="8" id="xi0-eC-bgi"/>
                         <constraint firstItem="Zpe-eS-Iyi" firstAttribute="leading" secondItem="5Cg-Pd-68g" secondAttribute="trailing" constant="8" id="xz7-DO-Yhz"/>
                         <constraint firstAttribute="height" constant="64" id="zLd-rE-Gpy"/>
@@ -87,6 +115,7 @@
                         <mask key="constraints">
                             <exclude reference="zLd-rE-Gpy"/>
                             <exclude reference="6az-H9-uUO"/>
+                            <exclude reference="7NZ-dN-ay4"/>
                         </mask>
                     </variation>
                 </view>
@@ -103,15 +132,17 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="imageView" destination="viD-ev-vm9" id="yJU-5U-9uB"/>
+                <outlet property="labelAvgPerf" destination="hML-VR-us8" id="Nzu-fb-AM0"/>
                 <outlet property="labelCp" destination="5Cg-Pd-68g" id="bBx-DH-scn"/>
-                <outlet property="labelHp" destination="Zpe-eS-Iyi" id="o5T-Fg-ERH"/>
+                <outlet property="labelHp" destination="KBH-Kd-4gR" id="6mE-cE-cZY"/>
+                <outlet property="labelMaxPerf" destination="Zpe-eS-Iyi" id="f4W-PU-pun"/>
+                <outlet property="labelMinPerf" destination="Nwn-2p-00W" id="akR-02-zLj"/>
                 <outlet property="labelName" destination="UcF-Pj-2SG" id="OZP-2r-1BX"/>
-                <outlet property="labelPerf" destination="mRe-vR-SQk" id="dxN-3w-aEC"/>
-                <outlet property="labelPowered" destination="hML-VR-us8" id="Dfn-Pa-wtt"/>
-                <outlet property="labelStardust" destination="KBH-Kd-4gR" id="1cN-oc-8Pf"/>
+                <outlet property="labelPowered" destination="NL3-hH-zvb" id="Om7-MT-0K9"/>
+                <outlet property="labelStardust" destination="mRe-vR-SQk" id="5zW-T4-Gxz"/>
                 <outlet property="pkmImage" destination="viD-ev-vm9" id="hbZ-ed-HTr"/>
             </connections>
-            <point key="canvasLocation" x="163" y="380"/>
+            <point key="canvasLocation" x="163" y="379"/>
         </view>
     </objects>
 </document>
